@@ -4,7 +4,8 @@ Changelog
 1.9.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Create symlinks for users boxes which use autofs. Needs at least fc.platform
+  commit:11f2052bd606 (#19668).
 
 
 1.9.1 (2016-03-20)
